﻿/*
 * $Id: ChangeLog,v 1.2236 2004/02/07 13:14:39 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-08 01:13 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/include/inkey.ch
    + #define K_MBUTTONDOWN           1008   // Middle Button Down
    + #define K_MBUTTONUP             1009   // Middle Button Up
    + #define K_MDBLCLK               1010   // Middle Button Double Click
    + #define K_MMLEFTDOWN            1011   // Mouse Move Left Down
    + #define K_MMRIGHTDOWN           1012   // Mouse Move Right Down
    + #define K_MMMIDDLEDOWN          1013   // Mouse Move Middle Down
    + #define K_MWFORWARD             1014   // Mouse Wheel Forward
    + #define K_MWBACKWARD            1015   // Mouse Wheel Backward
 
  * xharbour/source/rtl/gtwvt/gtwvt.c
    ! Updated to support above Inkey() constants.

2004-02-02 11:00 UTC-0300 Luiz Rafael Culik Guimares <culikr@brturbo.com>
  * contrib/tip/tipclient.prg
    contrib/tip/tipclientsmtp.prg
    ! minor fix to open methods

2004-02-07 12:20 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rtl/gtcrs/Makefile
  * xharbour/source/rtl/gtcrs/gtcrs.c
  * xharbour/source/rtl/gtcrs/gtcrs.h
  * xharbour/source/rtl/gtcrs/chrmap.c
  * xharbour/bin/hb-func.sh
    * added support to older version of ncurses 1.94 (the same one used
      by FlagShip)

  * xharbour/source/rtl/gtapi.c
  * xharbour/source/rtl/gtnul/gtnul.c
    * fixed Clipboard function declaration

Just small info about adding new functions into GT because all time
I have to fix sth.
1. HB_GT_FUNC() can be used only inside gt* driver
2. add <newFunc> into HB_GT_FUNCS structure
3. add function HB_GT_FUNC(gt_<newFunc>(...)) into GTNUL in dummy
   or basic version.
4. add wrapper for multi GT mode into GTNUL
    [...] hb_gt_<newFunc>(...)
    {